--- a/src/projeto_aplicado.ipynb
+++ b/src/projeto_aplicado.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "93ec8da3-3c51-4afc-99cd-949940be1d16",
    "metadata": {},
    "outputs": [
@@ -82,10 +82,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "1506d849",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-09-29 17:18:36.391059: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-09-29 17:18:36.538217: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-09-29 17:18:36.685097: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-09-29 17:18:36.812679: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-09-29 17:18:36.849504: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-09-29 17:18:37.088288: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-09-29 17:18:39.140395: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -112,38 +127,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4b1ed72e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[ WARN:0@7.008] global loadsave.cpp:241 findDecoder imread_('data_set/000022.jpg'): can't open/read file: check file path/integrity\n"
-     ]
-    },
-    {
-     "ename": "error",
-     "evalue": "OpenCV(4.10.0) /io/opencv/modules/imgproc/src/resize.cpp:4152: error: (-215:Assertion failed) !ssize.empty() in function 'resize'\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m     img_normalized \u001b[38;5;241m=\u001b[39m img_resized \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m255.0\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m img_normalized\n\u001b[0;32m----> 7\u001b[0m image \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess_image\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mdata_set/000022.jpg\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m, in \u001b[0;36mpreprocess_image\u001b[0;34m(image_path)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpreprocess_image\u001b[39m(image_path):\n\u001b[1;32m      2\u001b[0m     img \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mimread(image_path, cv2\u001b[38;5;241m.\u001b[39mIMREAD_GRAYSCALE)\n\u001b[0;32m----> 3\u001b[0m     img_resized \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mresize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimg\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m224\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m224\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     img_normalized \u001b[38;5;241m=\u001b[39m img_resized \u001b[38;5;241m/\u001b[39m \u001b[38;5;241m255.0\u001b[39m\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m img_normalized\n",
-      "\u001b[0;31merror\u001b[0m: OpenCV(4.10.0) /io/opencv/modules/imgproc/src/resize.cpp:4152: error: (-215:Assertion failed) !ssize.empty() in function 'resize'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def preprocess_image(image_path):\n",
     "    img = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
     "    img_resized = cv2.resize(img, (224, 224))\n",
     "    img_normalized = img_resized / 255.0\n",
-    "    return img_normalized\n",
-    "\n",
-    "image = preprocess_image('data_set/000022.jpg')"
+    "    return img_normalized"
    ]
   },
   {
@@ -157,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "a5430f1b",
    "metadata": {},
    "outputs": [],
@@ -201,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "5b34fb4c",
    "metadata": {},
    "outputs": [
@@ -212,65 +205,65 @@
       "Found 3 images belonging to 3 classes.\n",
       "Found 3 images belonging to 3 classes.\n",
       "Epoch 1/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 433ms/step - accuracy: 0.5417 - loss: 193.7515 - val_accuracy: 0.3333 - val_loss: 69.9269\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 541ms/step - accuracy: 0.2917 - loss: 0.9769 - val_accuracy: 0.3333 - val_loss: 1.8361\n",
       "Epoch 2/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 276ms/step - accuracy: 0.0000e+00 - loss: 121.5029 - val_accuracy: 0.3333 - val_loss: 10.6832\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 493ms/step - accuracy: 0.1667 - loss: 0.9869 - val_accuracy: 0.0000e+00 - val_loss: 2.0048\n",
       "Epoch 3/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 284ms/step - accuracy: 0.5417 - loss: 8.3481 - val_accuracy: 0.3333 - val_loss: 7.1125\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 470ms/step - accuracy: 0.5417 - loss: 0.8793 - val_accuracy: 0.0000e+00 - val_loss: 1.4120\n",
       "Epoch 4/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 317ms/step - accuracy: 0.2917 - loss: 6.0415 - val_accuracy: 0.0000e+00 - val_loss: 1.1928\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 668ms/step - accuracy: 0.7083 - loss: 0.9622 - val_accuracy: 0.3333 - val_loss: 0.9172\n",
       "Epoch 5/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 305ms/step - accuracy: 0.8333 - loss: 1.0888 - val_accuracy: 0.3333 - val_loss: 4.5737\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 434ms/step - accuracy: 1.0000 - loss: 0.5341 - val_accuracy: 0.3333 - val_loss: 1.6441\n",
       "Epoch 6/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 314ms/step - accuracy: 0.8333 - loss: 1.2305 - val_accuracy: 0.3333 - val_loss: 2.6399\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 424ms/step - accuracy: 0.2917 - loss: 0.8025 - val_accuracy: 0.6667 - val_loss: 0.8611\n",
       "Epoch 7/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 313ms/step - accuracy: 0.5417 - loss: 1.9705 - val_accuracy: 0.3333 - val_loss: 1.0691\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 397ms/step - accuracy: 0.2917 - loss: 0.9614 - val_accuracy: 0.3333 - val_loss: 1.2127\n",
       "Epoch 8/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 291ms/step - accuracy: 0.8333 - loss: 0.7198 - val_accuracy: 0.3333 - val_loss: 3.2521\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 374ms/step - accuracy: 1.0000 - loss: 0.7030 - val_accuracy: 0.0000e+00 - val_loss: 1.8661\n",
       "Epoch 9/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 316ms/step - accuracy: 0.5417 - loss: 4.7678 - val_accuracy: 0.3333 - val_loss: 2.2870\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 423ms/step - accuracy: 1.0000 - loss: 0.4371 - val_accuracy: 0.3333 - val_loss: 2.5328\n",
       "Epoch 10/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 266ms/step - accuracy: 0.2917 - loss: 4.7806 - val_accuracy: 0.6667 - val_loss: 1.1509\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 532ms/step - accuracy: 1.0000 - loss: 0.2780 - val_accuracy: 0.3333 - val_loss: 2.0446\n",
       "Epoch 11/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 265ms/step - accuracy: 0.7083 - loss: 0.5999 - val_accuracy: 0.3333 - val_loss: 1.1929\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 482ms/step - accuracy: 0.7083 - loss: 0.7421 - val_accuracy: 0.3333 - val_loss: 2.9001\n",
       "Epoch 12/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 280ms/step - accuracy: 0.0000e+00 - loss: 1.1926 - val_accuracy: 1.0000 - val_loss: 0.8861\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 537ms/step - accuracy: 0.8333 - loss: 0.3155 - val_accuracy: 0.0000e+00 - val_loss: 3.4635\n",
       "Epoch 13/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 306ms/step - accuracy: 0.8333 - loss: 0.9144 - val_accuracy: 0.0000e+00 - val_loss: 1.0864\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 611ms/step - accuracy: 0.8333 - loss: 0.3695 - val_accuracy: 0.0000e+00 - val_loss: 2.9191\n",
       "Epoch 14/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 313ms/step - accuracy: 0.4583 - loss: 1.0217 - val_accuracy: 0.6667 - val_loss: 1.1119\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 641ms/step - accuracy: 0.7083 - loss: 0.5690 - val_accuracy: 0.3333 - val_loss: 1.0479\n",
       "Epoch 15/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 311ms/step - accuracy: 0.4583 - loss: 1.1531 - val_accuracy: 0.3333 - val_loss: 1.3159\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 436ms/step - accuracy: 0.2917 - loss: 1.9166 - val_accuracy: 0.6667 - val_loss: 0.9523\n",
       "Epoch 16/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 281ms/step - accuracy: 1.0000 - loss: 0.8217 - val_accuracy: 0.0000e+00 - val_loss: 1.1368\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 431ms/step - accuracy: 0.7083 - loss: 0.4815 - val_accuracy: 0.3333 - val_loss: 1.0121\n",
       "Epoch 17/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 274ms/step - accuracy: 0.7083 - loss: 0.9359 - val_accuracy: 0.3333 - val_loss: 0.9880\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 381ms/step - accuracy: 0.7083 - loss: 0.8973 - val_accuracy: 0.3333 - val_loss: 2.3371\n",
       "Epoch 18/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 308ms/step - accuracy: 0.4583 - loss: 1.1324 - val_accuracy: 0.3333 - val_loss: 3.3960\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 387ms/step - accuracy: 0.7083 - loss: 0.5086 - val_accuracy: 0.3333 - val_loss: 1.1480\n",
       "Epoch 19/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 277ms/step - accuracy: 0.7083 - loss: 0.6701 - val_accuracy: 0.0000e+00 - val_loss: 2.6194\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 432ms/step - accuracy: 0.8333 - loss: 0.5117 - val_accuracy: 0.3333 - val_loss: 1.3193\n",
       "Epoch 20/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 308ms/step - accuracy: 0.4583 - loss: 2.3254 - val_accuracy: 0.6667 - val_loss: 0.8849\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 529ms/step - accuracy: 0.5417 - loss: 0.6266 - val_accuracy: 0.3333 - val_loss: 2.1564\n",
       "Epoch 21/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 304ms/step - accuracy: 1.0000 - loss: 0.8058 - val_accuracy: 0.3333 - val_loss: 1.5272\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 415ms/step - accuracy: 0.8333 - loss: 0.2016 - val_accuracy: 0.0000e+00 - val_loss: 3.4238\n",
       "Epoch 22/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 292ms/step - accuracy: 0.4583 - loss: 0.6812 - val_accuracy: 0.6667 - val_loss: 0.8363\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 426ms/step - accuracy: 0.4583 - loss: 0.6017 - val_accuracy: 0.3333 - val_loss: 2.2058\n",
       "Epoch 23/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 299ms/step - accuracy: 0.1667 - loss: 1.9825 - val_accuracy: 0.6667 - val_loss: 0.7156\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 379ms/step - accuracy: 0.4583 - loss: 1.0374 - val_accuracy: 0.3333 - val_loss: 1.9497\n",
       "Epoch 24/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 302ms/step - accuracy: 0.7083 - loss: 0.5632 - val_accuracy: 0.0000e+00 - val_loss: 1.7032\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 465ms/step - accuracy: 0.8333 - loss: 0.3993 - val_accuracy: 0.6667 - val_loss: 0.7140\n",
       "Epoch 25/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 374ms/step - accuracy: 0.4583 - loss: 2.5476 - val_accuracy: 0.0000e+00 - val_loss: 1.5120\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 375ms/step - accuracy: 1.0000 - loss: 0.4595 - val_accuracy: 0.3333 - val_loss: 2.5454\n",
       "Epoch 26/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 355ms/step - accuracy: 0.7083 - loss: 0.5922 - val_accuracy: 0.3333 - val_loss: 0.9474\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 370ms/step - accuracy: 0.8333 - loss: 0.6147 - val_accuracy: 0.3333 - val_loss: 2.5824\n",
       "Epoch 27/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 363ms/step - accuracy: 0.8333 - loss: 0.5762 - val_accuracy: 0.3333 - val_loss: 1.4614\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 416ms/step - accuracy: 1.0000 - loss: 0.4326 - val_accuracy: 0.0000e+00 - val_loss: 2.2158\n",
       "Epoch 28/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 318ms/step - accuracy: 0.7083 - loss: 0.7655 - val_accuracy: 0.0000e+00 - val_loss: 1.4002\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 345ms/step - accuracy: 0.8333 - loss: 0.1948 - val_accuracy: 0.3333 - val_loss: 1.8731\n",
       "Epoch 29/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 381ms/step - accuracy: 0.8333 - loss: 0.3411 - val_accuracy: 0.0000e+00 - val_loss: 1.3633\n",
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 447ms/step - accuracy: 0.7083 - loss: 0.4761 - val_accuracy: 0.0000e+00 - val_loss: 2.3207\n",
       "Epoch 30/30\n",
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 441ms/step - accuracy: 0.7083 - loss: 0.3868 - val_accuracy: 0.0000e+00 - val_loss: 1.2291\n"
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 320ms/step - accuracy: 1.0000 - loss: 0.3323 - val_accuracy: 0.3333 - val_loss: 1.4055\n"
      ]
     }
    ],
@@ -313,6 +306,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0c8b8cf4-89af-4aa1-bc2b-c4f160b02f93",
+   "metadata": {},
+   "source": [
+    "### Ao inicializar o modelo os pesos da rede neural são inicializados de forma aleatória, e como o processo de otimização do modelo começa a partir de diferentes pontos cada execução pode levar a resultados diferentes, por isso, cada vez que o código for executado os resultados não serão exatamente os mesmos, mas aproximados.\n",
+    "\n",
+    "\n",
+    "### image augmentation: técnicas de rotação, deslocamento, zoom e etc. aplicadas na imagem para criar novas variações para realizar o treinamento do modelo, sendo também um process"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a5bfd3e",
    "metadata": {},
    "source": [
@@ -321,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a386ec43",
    "metadata": {},
    "outputs": [
@@ -329,8 +333,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 121ms/step - accuracy: 0.0000e+00 - loss: 1.5140\n",
-      "Validação - Loss: 1.40328848361969, Acurácia: 0.0\n"
+      "\u001b[1m3/3\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 100ms/step - accuracy: 0.1667 - loss: 1.5009  \n",
+      "Validação - Loss: 1.5385065078735352, Acurácia: 0.3333333432674408\n"
      ]
     }
    ],
